# mlds

./: .gitignore  .travis.yml  CITATION.cff  README  README.md  README.rst  README_parallel.rst  TODO  pyproject.toml  setup.py
.github/workflows/: ci-tests.yml
examples/: data.csv  data_mlds_reindexed.csv  data_quadruples.csv  data_small.csv  data_triads.csv  example.py  example_predict_thresholds.py  example_quadruples.py  example_simulation.py  example_stim_generation.py
mlds/: __init__.py  cue.npy  example_stim.py  generate_quadruples.py  generating_quadruples.R  mlds.py  mlds_gam.py  mlds_utils.py  pbinom.diagnostics.R  pboot.mlds.R  sensoryfunctions.py  test.mlds  threshold_prediction.py  utilsbootstrap.py
mlds/bugs/: SS.csv  SS_ARu.csv  test.csv  testing_consistency.R
mlds/example/: data.csv  example.py  example_simulation.py  example_stim_generation.py
mlds/rpy2/: 0.csv  1.csv  2.csv  create_example_files.py  create_two_example_files.py  example_GAM.py  first.csv  rpy2_testing.py  second.csv  sim_scales_powerfn.py  test_modelcomp_inR.R  thrid.csv
mlds/sensoryfunctions/: __init__.py  sensoryfunctions.py
mlds/test/: 0.csv  1.csv  2.csv  3.csv  output_test.MLDS  test_cols.csv  test_mlds.py  test_mlds_normscale.py  test_sensoryfunctions.py
test/: output_mldsfile.csv  test.csv  test_cols.csv  test_mlds.py
